methods.basics.Methods.scala.error
Compilation error:
Methods:1: error: ':' expected but ')' found.
def goAndGet(n) {
              ^Methods:19: error: identifier expected but '}' found.
	} 
        ^