methods.basics.Methods.scala.code
def goAndGet(n) {
  for (k<- 1 to n){
    forward()
  }
  pickupBaggle()
  for (k<- 1 to n){
    backward()
  }
  dropBaggle()
}

for (i <- 1 to 7) {
    goAndGet(i)
    right()
    forward()
    left()
}